Add Material UI's TextField.

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,3 @@
 Raza Gill <raza.gill@outlook.com> (http://github.com/razagill)
 Nikita Lebedev <bloomber111@gmail.com> (http://github.com/bl00mber)
+Cezar Derevlean <cezar.derevlean@gmail.com> (https://github.com/cezarderevlean)
